Primi test e risoluzioni errori minori
