# service/api/uncommentPhoto.go
@@ -10,7 +10,7 @@ import (
 )
 
 func (rt *_router) uncommentPhoto(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
-	commentedID, err := strconv.Atoi(ps.ByName("commented_id"))
+	commentedID, err := strconv.Atoi(ps.ByName("user_id"))
 	if err != nil {
 		http.Error(w, "Bad Request "+err.Error(), http.StatusBadRequest)
 		return
