# service/api/unfollowUser.go
@@ -9,7 +9,7 @@ import (
 )
 
 func (rt *_router) unfollowUser(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
-	followerID, err := strconv.Atoi(ps.ByName("follower_id"))
+	followerID, err := strconv.Atoi(ps.ByName("user_id"))
 	if err != nil {
 		http.Error(w, "Bad Request"+err.Error(), http.StatusBadRequest)
 		return
